# gaema-rfuav-synth

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/drone-rf-sim/: .gitignore  HYBRID_SPECTRUM.md  README.md  USAGE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/drone-rf-sim/docs/: propagation-model.md
configs/: dataset_config.yaml  fitted_params.yaml  rfuav_config.yaml  stft_config.yaml  synthetic_config.yaml  validation_config.yaml
docs/: rfuav_repo_analysis.md
gaema_rfuav_synth/: config.py
gaema_rfuav_synth/dataset/: exporter.py  metadata.py  splitter.py
gaema_rfuav_synth/labeling/: bbox.py  taxonomy.py
gaema_rfuav_synth/rfuav/: background_extractor.py  feature_extractor.py  iq_feature_extractor.py  paper_params.py  sample_loader.py
gaema_rfuav_synth/signal/: channel.py  events.py  fhss_generator.py  impairments.py  interference_generator.py  noise.py  snr.py  video_generator.py
gaema_rfuav_synth/transform/: colormap.py  spectrogram.py  stft.py
gaema_rfuav_synth/viz/: compare.py  overlay.py  preview.py  sensitivity.py
scripts/: compare_real_synthetic.py  download_rfuav_sample.py  export_signal_profile.py  export_web_spectrogram.py  extract_background.py  extract_raw_features.py  extract_real_features.py  fit_drone_params.py  generate_synthetic_iq.py  make_spectrogram.py  preview_synthetic_dataset.py  regenerate_iq.py  stft_sensitivity.py  validate_real_vs_synthetic.py
tests/: test_bbox.py  test_generators.py  test_iq_features.py  test_metadata.py  test_snr.py  test_stft.py  test_web_exports.py
(+39 files in other folders)
