[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gaema-rfuav-synth"
version = "0.1.0"
description = "RFUAV-like synthetic IQ/STFT drone-RF dataset generation harness (GAEMA-1)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pillow",
    "pandas",
    "pyyaml",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["gaema_rfuav_synth*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
